SERVER-7734 Increase StackChecker limit in Mac OS X build

Test for Mac OS X specifically, as well as Linux, and increase the stack
limit check for Mac only.  Platforms other than Windows, Mac and Linux
will get a default size, same as the Linux size for now.