src/mongo/db/client.cpp
@@ -58,8 +58,12 @@ namespace mongo {
     struct StackChecker { 
 #if defined(_WIN32)
         enum { SZ = 322 * 1024 };
-#else
+#elif defined(__APPLE__) && defined(__MACH__)
+        enum { SZ = 362 * 1024 };
+#elif defined(__linux__)
         enum { SZ = 218 * 1024 };
+#else
+        enum { SZ = 218 * 1024 };   // default size, same as Linux to match old behavior
 #endif
         char buf[SZ];
         StackChecker() { 
